AWS/security-group.tf
resource "aws_security_group" "security-tf" {
  name        = "security-tf"
  description = "allow HTTP, HTTPS and SSH"
  vpc_id      = aws_vpc.vpc-tf.id
  # ingress {
  #   from_port   = 22
  #   to_port     = 22
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }
  # ingress {
  #   from_port   = 80
  #   to_port     = 80
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }
  # ingress {
  #   from_port   = 443
  #   to_port     = 443
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }
  # egress {
  #   from_port   = 0
  #   to_port     = 0
  #   protocol    = "-1"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

}

resource "aws_security_group_rule" "security-rule-ingress-tf" {
  type              = "ingress"
  for_each          = var.open_ports
  from_port         = each.value
  to_port           = each.value
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.security-tf.id
  description       = "allowing inbound for ${each.value} port"
}
resource "aws_security_group_rule" "security-rule-egress-tf" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.security-tf.id
  description       = "allowing outbound for all ports"
}
